  [7] AllOverIt.Fixture.FakeItEasy (v1.3.0)  - requires [6] v1.5.0

======================================================================================================================



17 Aug 2021
======================================================================================================================
AllOverIt.Fixture - v1.5.0
  * Updated to use FluentAssertions v6.0.0

AllOverIt.Fixture.FakeItEasy - v1.3.0
  * Updated to use AllOverIt.Fixture v1.5.0



8 Aug 2021
======================================================================================================================
AllOverIt.Validation - v0.1.0
  * Initial release



5 Aug 2021
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync - v0.8.1
  * Correction to datasource lookup key sanitisation
  * Updated to Amazon.CDK.AWS.AppSync v1.115.0 and removed Amazon.CDK.AWS.CloudFormation



4 Aug 2021
======================================================================================================================
AllOverIt - v1.16.1
  * Corrected some guard checks



30 Jul 2021
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync - v0.8.0
  * Breaking changes, now enforcing the use of methods to describe a Graphql schema. Allowing the use of properties
    and methods added too much complexity (maintenance). A method with no arguments satisfies the same requirements.
  * Added/updated exception messages for invalid declarations such as nullable returns types and method arguments,
    missing datasource atttributes, and the use of properties.



28 Jul 2021
======================================================================================================================
AllOverIt - v1.16.0
  * Added SelectAsList(), SelectAsReadOnlyCollection(), and SelectAsReadOnlyList() extension methods