@@ -3,7 +3,6 @@ using AutoFixture;
 using System;
 using System.Collections.Generic;
 using System.Linq;
-using System.Threading.Tasks;
 
 namespace AllOverIt.Fixture
 {
@@ -66,41 +65,6 @@ namespace AllOverIt.Fixture
             }
 
             return action;
-        }
-
-        /// <summary>Provides the ability to invoke an async action so it can be chained with assertions provided by FluentAssertions.</summary>
-        /// <param name="action">The async action to be invoked.</param>
-        /// <returns>The same action passed to the method.</returns>
-#pragma warning disable IDE0079 // Remove unnecessary suppression
-#pragma warning disable CA1822 // Mark members as static
-        protected async Task Awaiting(Func<Task> action)
-#pragma warning restore CA1822 // Mark members as static
-#pragma warning restore IDE0079 // Remove unnecessary suppression
-        {
-            if (action == null)
-            {
-                throw new ArgumentNullException(nameof(action));
-            }
-
-            await action.Invoke();
-        }
-
-        /// <summary>Provides the ability to invoke an async action that returns a result.</summary>
-        /// <typeparam name="TResult">The result type returned by the Action.</typeparam>
-        /// <param name="action">The async action to be invoked.</param>
-        /// <returns>The result of the invoked async action.</returns>
-#pragma warning disable IDE0079 // Remove unnecessary suppression
-#pragma warning disable CA1822 // Mark members as static
-        protected async Task<TResult> Awaiting<TResult>(Func<Task<TResult>> action)
-#pragma warning restore CA1822 // Mark members as static
-#pragma warning restore IDE0079 // Remove unnecessary suppression
-        {
-            if (action == null)
-            {
-                throw new ArgumentNullException(nameof(action));
-            }
-
-            return await action.Invoke();
         }
 
         /// <summary>Injects a specific instance of a specified type that will be resolved as a shared (single) instance.</summary>
